added artifact name to buidlspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,4 +8,9 @@ phases:
   build:
     commands:
       - yarn run build
-
+  artifacts:
+  files:
+    - '**/*'
+  base-directory: base_dir
+  name: build-artifact-name
+  discard-paths: no
