--- a/studysesh-rest/package.json
+++ b/studysesh-rest/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "deploy" :"yarn && yarn run build && yarn start"
+    "deploy" :"yarn && yarn build && yarn start"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
