--- a/studysesh-rest/package.json
+++ b/studysesh-rest/package.json
@@ -1,6 +1,9 @@
 {
   "name": "studysesh-rest",
   "version": "0.0.1",
+  "engines": {
+    "node" : ">=16.0.0 <17.0.0"
+  },
   "description": "",
   "author": "",
   "private": true,
