--- a/studysesh-rest/package.json
+++ b/studysesh-rest/package.json
@@ -2,7 +2,8 @@
   "name": "studysesh-rest",
   "version": "0.0.1",
   "engines": {
-    "node" : "16.17.0"
+    "node" : "16.17.0",
+    "npm": "8.15.0"
   },
   "description": "",
   "author": "",
