--- a/studysesh-rest/package.json
+++ b/studysesh-rest/package.json
@@ -2,8 +2,8 @@
   "name": "studysesh-rest",
   "version": "0.0.1",
   "engines": {
-    "node" : ">16.0.0",
-    "npm": "8.15.0"
+    "node" : ">=16 <17",
+    "npm": ">=8 <9"
   },
   "description": "",
   "author": "",
