--- a/studysesh-rest/package.json
+++ b/studysesh-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "studysesh-rest",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "engines": {
     "node" : ">=16 <17",
     "npm": ">=8 <9"
@@ -22,7 +22,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "deploy" :"npm install && npm run build && npm run start"
+    "deploy" :"yarn && yarn build && yarn start"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
